Adapt to lower version